@@ -1,0 +1,62 @@
+/* XPM */
+static char * ie_editTextIcon_xpm[] = {
+"20 20 39 1",
+" 	c #D8D8D8",
+".	c #636363",
+"+	c #111111",
+"@	c #454545",
+"#	c #1B1B1B",
+"$	c #3E3E3E",
+"%	c #303030",
+"&	c #B3B3B3",
+"*	c #252525",
+"=	c #8D8D8D",
+"-	c #2F2F2F",
+";	c #212121",
+">	c #545454",
+",	c #696969",
+"'	c #2E2E2E",
+")	c #7D7D7D",
+"!	c #727272",
+"~	c #AEAEAE",
+"{	c #7F7F7F",
+"]	c #6C6C6C",
+"^	c #474747",
+"/	c #313131",
+"(	c #A8A8A8",
+"_	c #0D0D0D",
+":	c #010101",
+"<	c #5D5D5D",
+"[	c #6E6E6E",
+"}	c #5C5C5C",
+"|	c #070707",
+"1	c #8F8F8F",
+"2	c #0F0F0F",
+"3	c #040404",
+"4	c #595959",
+"5	c #5A5A5A",
+"6	c #343434",
+"7	c #2B2B2B",
+"8	c #9F9F9F",
+"9	c #484848",
+"0	c #3B3B3B",
+"                    ",
+"                    ",
+"    .+@@@@@@@#      ",
+"   .$%&&&&&&&@      ",
+"  .*=-&&&&&&&@      ",
+"  ;>>,&&&&&&&@      ",
+"  '&)!!!!!!!~@      ",
+"  '&)!!!!!!!~@      ",
+"  '&&&&&&&&&&@  {+] ",
+"  '&^///////(@ {_:< ",
+"  '&&&&&&&&&&@[_:}  ",
+"  '&)!!!!!!!~@|:}   ",
+"  '&)!!!!!!!12:}    ",
+"  '&&&&&&&&&$34     ",
+"  '&^///////56      ",
+"  '&&&&&&&&&&@      ",
+"  78888888888$      ",
+"  900000000000      ",
+"                    ",
+"                    "};
